<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.StaticCategories">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.Guideline

        android:id="@+id/guide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/litreature"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="180dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/literature"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guide"
        app:layout_constraintTop_toTopOf="parent"

        />
    <Button
        android:id="@+id/lifestyle"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="90dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/lifestyle"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guide"
        app:layout_constraintTop_toTopOf="@id/litreature"

        />
    <Button
        android:id="@+id/coding"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="90dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/coding"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guide"
        app:layout_constraintTop_toTopOf="@id/lifestyle"

        />
    <Button
        android:id="@+id/movies"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="90dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/movies"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guide"
        app:layout_constraintTop_toTopOf="@id/coding"

        />
    <Button
        android:id="@+id/booze"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="90dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/booze"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guide"
        app:layout_constraintTop_toTopOf="@id/movies"

        />
    <Button
        android:id="@+id/cartoon"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="180dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/cartoon"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@id/guide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <Button
        android:id="@+id/cricket"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="90dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/cricket"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@id/guide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/cartoon"
        />
    <Button
        android:id="@+id/web_series"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="90dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/web"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@id/guide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/cricket"


        />
    <Button
        android:id="@+id/politics"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="90dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/politics"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@id/guide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/web_series"


        />
    <Button
        android:id="@+id/food"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="90dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/food"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@id/guide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/politics"


        />




</androidx.constraintlayout.widget.ConstraintLayout>