<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activity.InstructionActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintTop_toTopOf="parent"/>



    <TextView
        android:id="@+id/tv_instruction"
        android:layout_width="199dp"
        android:layout_height="50dp"
        android:fontFamily="@font/amaranth"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/instruction"
        android:textColor="@color/bg"
        android:textSize="28sp"
        android:textStyle="bold|italic"
        app:fontFamily="@font/amaranth"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08"></TextView>
    <TextView
        android:id="@+id/tv_instruction1"
        android:layout_width="384dp"
        android:layout_height="50dp"
        android:fontFamily="@font/alike"
        android:foregroundGravity="center"
        android:text="@string/instruction1"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="italic"
        android:gravity="left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.206"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.23"></TextView>
    <TextView
        android:id="@+id/tv_instruction2"
        android:layout_width="440dp"
        android:layout_height="66dp"
        android:fontFamily="@font/alike"
        android:foregroundGravity="center"
        android:gravity="left"
        android:text="@string/instruction2"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.321"></TextView>
    <TextView
        android:id="@+id/tv_instruction3"
        android:layout_width="387dp"
        android:layout_height="36dp"
        android:fontFamily="@font/alike"
        android:foregroundGravity="center"
        android:text="@string/instruction3"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.428"></TextView>
    <TextView
        android:id="@+id/tv_instruction4"
        android:layout_width="402dp"
        android:layout_height="71dp"
        android:fontFamily="@font/alike"
        android:foregroundGravity="center"
        android:text="@string/instruction4"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.548"></TextView>
    <TextView
        android:id="@+id/tv_instruction5"
        android:layout_width="400dp"
        android:layout_height="67dp"
        android:fontFamily="@font/alike"
        android:foregroundGravity="center"
        android:text="@string/instruction5"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.67"></TextView>
    <TextView
        android:id="@+id/tv_instruction6"
        android:layout_width="400dp"
        android:layout_height="67dp"
        android:fontFamily="@font/alike"
        android:foregroundGravity="center"
        android:text="@string/instruction6"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.771"></TextView>
    <Button
        android:id="@+id/btn_start"
        android:layout_width="300dp"
        android:layout_height="49dp"
        android:background="@color/bg"
        android:text="@string/start"
        android:textColor="#000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.941"></Button>
</androidx.constraintlayout.widget.ConstraintLayout>