<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activity.RegisterActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amaranth"
        android:gravity="center"
        android:text="@string/registration"
        android:textColor="@color/bg"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        android:layout_marginTop="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041" />
    <EditText
        android:id="@+id/userName"
        android:layout_width="385dp"
        android:layout_height="65dp"
        android:fontFamily="@font/alike"
        android:foregroundGravity="center"
        android:hint="Name"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.175"
        android:inputType="textPersonName"></EditText>
    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="385dp"
        android:layout_height="65dp"
        android:fontFamily="@font/alike"
        android:foregroundGravity="center"
        android:hint="Email"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.292"
        android:inputType="textEmailAddress"></EditText>
    <EditText
        android:id="@+id/password"
        android:layout_width="385dp"
        android:layout_height="65dp"
        android:fontFamily="@font/alike"
        android:foregroundGravity="center"
        android:hint="Password"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.415"
        android:inputType="textPassword"></EditText>
    <CheckBox
        android:id="@+id/checkbox_literature"
        android:layout_width="145dp"
        android:layout_height="34dp"
        android:text="@string/literature"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53"
        tools:ignore="MissingConstraints,OnClick" />
    <CheckBox
        android:id="@+id/checkbox_lifestyle"
        android:layout_width="150dp"
        android:layout_height="37dp"
        android:text="@string/lifestyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.605"
        tools:ignore="MissingConstraints,OnClick" />
    <CheckBox
        android:id="@+id/checkbox_coding"
        android:layout_width="145dp"
        android:layout_height="34dp"
        android:text="@string/coding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.668"
        tools:ignore="MissingConstraints,OnClick" />
    <CheckBox
        android:id="@+id/checkbox_booze"
        android:layout_width="145dp"
        android:layout_height="34dp"
        android:text="@string/booze"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.809"
        tools:ignore="MissingConstraints,OnClick"
        />
    <CheckBox
        android:id="@+id/checkbox_cartoon"
        android:layout_width="145dp"
        android:layout_height="34dp"
        android:text="@string/cartoon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.766"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53"
        tools:ignore="MissingConstraints,OnClick" />
    <CheckBox
        android:id="@+id/checkbox_cricket"
        android:layout_width="145dp"
        android:layout_height="34dp"
        android:text="@string/cricket"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.766"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.605"
        tools:ignore="MissingConstraints,OnClick" />
    <CheckBox
        android:id="@+id/checkbox_series"
        android:layout_width="145dp"
        android:layout_height="34dp"
        android:text="@string/web"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.766"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.668"
        tools:ignore="MissingConstraints,OnClick" />
    <CheckBox
        android:id="@+id/checkbox_politics"
        android:layout_width="145dp"
        android:layout_height="34dp"
        android:text="@string/politics"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.766"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.74"
        tools:ignore="MissingConstraints,OnClick" />
    <CheckBox
        android:id="@+id/checkbox_movies"
        android:layout_width="145dp"
        android:layout_height="34dp"
        android:text="@string/movies"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.74"
        tools:ignore="MissingConstraints,OnClick" />
    <CheckBox
        android:id="@+id/checkbox_food"
        android:layout_width="145dp"
        android:layout_height="34dp"
        android:text="@string/food"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.766"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.809"
        tools:ignore="MissingConstraints,OnClick" />
    <Button
        android:id="@+id/btn_register"
        android:layout_width="300dp"
        android:layout_height="49dp"
        android:background="@color/bg"
        android:fontFamily="@font/amaranth"
        android:text="Register"
        android:textColor="#000"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"></Button>
</androidx.constraintlayout.widget.ConstraintLayout>