<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activity.ScoreBoardActivity">
    <TextView
        android:id="@+id/tv_score"
        android:layout_width="242dp"
        android:layout_height="48dp"
        android:fontFamily="@font/amaranth"
        android:gravity="center"
        android:text="@string/yourScore"
        android:textColor="@color/bg"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.062" />
    <TextView
        android:id="@+id/score"
        android:layout_width="116dp"
        android:layout_height="58dp"
        android:fontFamily="@font/amaranth"
        android:gravity="center"
        android:text="83"
        android:textColor="#000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.163"></TextView>
    <TextView
        android:id="@+id/tv_noOfQuestionsAttempted"
        android:layout_width="241dp"
        android:layout_height="118dp"
        android:fontFamily="@font/amaranth"
        android:gravity="center"
        android:text="@string/noOfQuestionsAttempted"
        android:textColor="@color/bg"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.336" />
    <TextView
        android:id="@+id/noOfQuestionsAttempted"
        android:layout_width="119dp"
        android:layout_height="92dp"
        android:fontFamily="@font/amaranth"
        android:gravity="center"
        android:text="15"
        android:textColor="#000"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.339"></TextView>
    <TextView
        android:id="@+id/tv_noOfCorrectAnswers"
        android:layout_width="241dp"
        android:layout_height="118dp"
        android:fontFamily="@font/amaranth"
        android:gravity="center"
        android:text="@string/noOfCorrectAnswers"
        android:textColor="@color/bg"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.554" />
    <TextView
        android:id="@+id/noOfCorrectAnswers"
        android:layout_width="119dp"
        android:layout_height="92dp"
        android:fontFamily="@font/amaranth"
        android:gravity="center"
        android:text="10"
        android:textColor="#000"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.549"></TextView>
    <TextView
        android:id="@+id/tv_noOfWrongAnswers"
        android:layout_width="241dp"
        android:layout_height="118dp"
        android:fontFamily="@font/amaranth"
        android:gravity="center"
        android:text="@string/noOfWrongAnswers"
        android:textColor="@color/bg"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.776" />
    <TextView
        android:id="@+id/noOfWrongAnswers"
        android:layout_width="119dp"
        android:layout_height="92dp"
        android:fontFamily="@font/amaranth"
        android:gravity="center"
        android:text="5"
        android:textColor="#000"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.762"></TextView>
    <Button
        android:id="@+id/btn_viewLeaderBoard"
        android:layout_width="300dp"
        android:layout_height="49dp"
        android:background="@color/bg"
        android:text="View Leaderboard"
        android:textColor="#000"
        android:fontFamily="@font/alike"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.941"></Button>
</androidx.constraintlayout.widget.ConstraintLayout>